<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BookManagement</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="koneko">koneko</string>
    <string name="book_name">書籍名</string>
	<string name="book_price">価格</string>
	<string name="book_date">購入日</string>
	<string name="add_image">画像添付</string>
	<string name="save_button">保存</string>
	<string name="list_title">書籍一覧</string>
	<string name="add_button">追加</string>
	<string name="set_account_button">アカウント設定</string>
	<string name="mail_address">メールアドレス</string>
	<string name="password">パスワード</string>
	<string name="confirm">パスワード確認</string>
	<string name="reload_button">もっと読み込む</string>
</resources>
